# Rust-Miscellaneous-Projects

./: Cargo.toml  README.md
src/: fireworks.rs  geometry.rs  inverse-kinematics.rs  main.rs  spiral-fractal.rs  trilateration.rs
