[package]
name = "rust_projects"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
rand = "0.8.4"
bevy_polyline = "0.3"



[[example]]
name = "fireworks"
path = "src/fireworks.rs"
[[example]]
name = "spiral"
path = "src/spiral-fractal.rs"
[[example]]
name = "kinematics"
path = "src/inverse-kinematics.rs"
[[example]]
name = "trilateration"
path = "src/trilateration.rs"
